Configure ComfyUI environment for HuggingFace Spaces deployment
- Updated Dockerfile with NVIDIA CUDA base, ComfyUI installation, and custom nodes
- Enhanced start_comfyui.sh with automatic model downloading from HuggingFace
- Improved app.py with better progress tracking and error handling
- Updated comfyui_client.py with progress callback support
- Streamlined requirements.txt for Gradio frontend
- Updated .gitignore to exclude runtime data but keep configs
- Enhanced DEPLOYMENT.md with comprehensive deployment guide

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,25 @@ venv/
 ENV/
 .venv
 
-# ComfyUI
-models/
-input/
-output/
+# ComfyUI runtime data (not the config)
+models/checkpoints/*.safetensors
+models/controlnet/*.safetensors
+models/ipadapter/*.safetensors
+models/clip_vision/*.safetensors
+models/loras/
+models/vae/
+input/*.png
+input/*.jpg
+input/*.jpeg
+input/*.webp
+output/*.png
+output/*.jpg
 temp/
 *.log
+hf_cache/
+
+# Keep workflow files
+!workflows/*.json
 
 # IDE
 .vscode/
@@ -32,3 +45,7 @@ flagged/
 # Temporary files
 *.tmp
 *.bak
+
+# User data
+user/__manager/cache/
+user/default/ComfyUI-Manager/cache/
